Bug 17136 - X crashes when adding mode to disconnected device
Summary: X crashes when adding mode to disconnected device
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/radeonhd (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Luc Verhaegen
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-14 07:13 UTC by Leif Gruenwoldt
Modified: 2008-09-03 13:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg showing crash when running xrandr commands (235.44 KB, application/octet-stream)
2008-08-14 07:13 UTC, Leif Gruenwoldt
no flags Details
Fix. (966 bytes, patch)
2008-08-15 04:50 UTC, Egbert Eich
no flags Details | Splinter Review

Description Leif Gruenwoldt 2008-08-14 07:13:55 UTC
Created attachment 18282 [details]
xorg showing crash when running xrandr commands

This morning I didn't realize my external DVI monitor was disconnected from my docking station when I tried to run my usual xrandr commands to light it up. However doing so caused X to crash.

Steps to reproduce:

1. startx -- -logverbose 7
2. xrandr --newmode "1920x1200_60.00"  162  1920 2048 2256 2592  1200 1201 1204 124
3. xrandr --addmode DVI-D_1 1920x1200_60.00

crash.

Oddly, the crash doesn't happen if I run plain X from the command line and run the same xrandr commands. It only seems to crash if I'm sitting at my gnome desktop.
Comment 1 Egbert Eich 2008-08-15 04:50:37 UTC
Created attachment 18296 [details] [review]
Fix.

It doesn't make sense to add modes to an unattached output as we cannot validate the mode against the display device. Thus we should fail it unconditionally.
Comment 2 Egbert Eich 2008-08-15 04:55:20 UTC
Fix pushed: 5660728fa27289ae8d51f72028918d7dac04bef3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.