RandR: Don't allow adding modes to a disconnected output.

As long as we don't know a device we cannot validate a mode,
thus we just fail it.
Fix for: http://bugs.freedesktop.org/show_bug.cgi?id=17136